# simple-ml-predict-model

./: MLmodel.ipynb  README.md  app.py  pyproject.toml
static/: index.css
templates/: index.html
